--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
-    "typescript": "~3.7.2"
+    "typescript": "^4.6.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -54,5 +54,8 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.0",
     "prettier": "^2.0.5"
+  },
+  "optionalDependencies": {
+    "fsevents": "^2.3.3"
   }
 }
